# pgm_map_creator

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: open_world.launch  request_publisher.launch
maps/: test.pgm  test.yaml  test2.pgm  test2.yaml
msgs/: CMakeLists.txt
src/: collision_map_creator.cc
worlds/: test.world  test2.world
