<?xml version="1.0"?>
<package format="2">
  <name>pgm_map_creator</name>
  <version>0.0.0</version>
  <description>This project is designed to generate PGM maps directly from Gazebo .world files. </description>

  <maintainer email="571188579@qq.com">JZX-MY</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
